HTML CSS Desktop pronto.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,29 @@
 </head>
 <body>
     
-    <header>
+    <nav id="nav__fixed">
+        <div class="content">
+            <div id="logo__fixed">
+                <a href="#home">
+                    <img src="./assets/images/logo_big_grill_branco.png" alt="LOGO">
+                </a>
+            </div>
+            <div id="menu__header__fixed">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#cardapio">Cardápio</a></li>
+                    <li><a href="#sobre">Sobre Nós</a></li>
+                    <li><a href="#espaco">Nosso Espaço</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <header id="home">
         <nav>
             <div id="logo">
                 <a href="#home">
-                    <img src="./assets/images/logo_big_grill.png" alt="LOGO">
+                    <img src="./assets/images/logo_big_grill_branco.png" alt="LOGO">
                 </a>
             </div>
             <div id="menu__header">
@@ -29,102 +47,105 @@
     </header>
 
     <main>
-        <section id="home">
-            <div class="content">
-                <div class="center">
-                    Content center home
-                </div>
-            </div>
-        </section>
         <section id="cardapio">
             <div class="content">
                 <div id="bebidas">
+                    <h2>Bebidas</h2>
                     <div class="card">
                         <img src="./assets/images/heineken.jpg" alt=""/>
                         <h3>Heineken</h3>
                         <h4>Preço:</h4> <span>R$6,50</span>
+                        <br><br>
                         <h4>Tamanho:</h4> <span>330ml</span>
                     </div>
                     <div class="card">
                         <img src="./assets/images/stella.jpg" alt=""/>
                         <h3>Stella</h3>
                         <h4>Preço:</h4> <span>R$8,00</span>
+                        <br><br>
                         <h4>Tamanho:</h4> <span>600ml</span>
                     </div>
                     <div class="card">
                         <img src="./assets/images/brahma.jpg" alt=""/>
                         <h3>Brahma</h3>
                         <h4>Preço:</h4> <span>R$4,00</span>
+                        <br><br>
                         <h4>Tamanho:</h4> <span>330ml</span>
                     </div>
                     <div class="card">
                         <img src="./assets/images/chopp_claro.png" alt=""/>
                         <h3>Chopp Claro</h3>
                         <h4>Preço:</h4> <span>R$15,00</span>
+                        <br><br>
                         <h4>Tamanho:</h4> <span>750ml</span>                        
                     </div>
                     <div class="card">
                         <img src="./assets/images/chopp_escuro.png" alt=""/>
                         <h3>Chopp Pielsen</h3>
                         <h4>Preço:</h4> <span>R$17,00</span>
+                        <br><br>
                         <h4>Tamanho:</h4> <span>750ml</span>
-                    </div>
-                    <div class="card">
-                        <img src="./assets/images/chopp_claro.png" alt=""/>
-                        <h3>Chopp Claro</h3>
-                        <h4>Preço:</h4> <span>R$15,00</span>
-                        <h4>Tamanho:</h4> <span>750ml</span>                        
                     </div>
                     <div class="card">
                         <img src="./assets/images/vinho_branco.png" alt=""/>
                         <h3>Vinho Branco Algairen</h3>
                         <h4>Preço:</h4> <span>R$129,00</span>
+                        <br><br>
                         <h4>Tamanho:</h4> <span>600ml</span>
                     </div>
                     <div class="card">
                         <img src="./assets/images/vinho_tinto.png" alt=""/>
                         <h3>Vinho Tinto Chateau Garbin</h3>
                         <h4>Preço:</h4> <span>R$79,00</span>
+                        <br><br>
                         <h4>Tamanho:</h4> <span>600ml</span>
                     </div>
                     <div class="card">
                         <img src="./assets/images/coca_cola.jpg" alt=""/>
                         <h3>Coca-cola lata</h3>
                         <h4>Preço:</h4> <span>R$5,00</span>
+                        <br><br>
                         <h4>Tamanho:</h4> <span>350ml</span>
                     </div>
                     <div class="card">
                         <img src="./assets/images/fanta.jpg" alt=""/>
                         <h3>Fanta lata</h3>
                         <h4>Preço:</h4> <span>R$5,00</span>
+                        <br><br>
                         <h4>Tamanho:</h4> <span>350ml</span>
                     </div>
                 </div>
                 <div id="porcoes">
+                    <h2>Porções</h2>
                     <div class="card">
                         <img src="./assets/images/fraldinha.png" alt=""/>
                         <h3>Fraldinha</h3>
                         <h4>Preço:</h4> <span>R$130,00</span>
+                        <br><br>
                         <h4>Tamanho:</h4> <span>Inteira</span>
                     </div>
                     <div class="card">
                         <img src="./assets/images/carne_de_sol_com_mandioca.png" alt=""/>
                         <h3>Carne de Sol com Mandioca</h3>
                         <h4>Preço:</h4> <span>R$39,00</span>
+                        <br><br>
                         <h4>Tamanho:</h4> <span>Meia</span>
                     </div>
                     <div class="card">
                         <img src="./assets/images/cupim.png" alt=""/>
                         <h3>Cupim com Batata Frita</h3>
                         <h4>Preço:</h4> <span>R$110,00</span>
+                        <br><br>
                         <h4>Tamanho:</h4> <span>Inteira</span>
                     </div>
                 </div>
                 <div id="hamburguers">
+                    <h2>Hamburguers</h2>
                     <div class="card">
                         <img src="./assets/images/costela.png" alt=""/>
                         <h3>Burguer Costela</h3>
                         <h4>Preço:</h4> <span>R$39,00</span>
+                        <br><br>
                         <h4>Ingredientes:</h4> 
                         <span>
                             Pão brioche, 1 hamburguer de costela de 180g, 
@@ -136,6 +157,7 @@
                         <img src="./assets/images/bacon.png" alt=""/>
                         <h3>Burguer Bacon</h3>
                         <h4>Preço:</h4> <span>R$29,00</span>
+                        <br><br>
                         <h4>Ingredientes:</h4> 
                         <span>
                             Pão brioche, 1 hamburguer 180g, bacon, milho, alface, 
@@ -146,6 +168,7 @@
                     <img src="./assets/images/angus.png" alt=""/>
                     <h3>Burguer Angus</h3>
                     <h4>Preço:</h4> <span>R$36,00</span>
+                    <br><br>
                     <h4>Ingredientes:</h4> 
                     <span>
                         Pão brioche, 1 hamburguer angus de 180g, bacon, milho, 
@@ -154,50 +177,62 @@
                     </div>
                 </div>
                 <div id="massas">
+                    <h2>Massas</h2>
                     <div class="card">
                         <img src="./assets/images/espaguetti_bolonhesa.jpeg" alt=""/>
                         <h3>Espaguetti à Bolonhesa</h3>
                         <h4>Preço:</h4> <span>R$18,00</span>
+                        <br><br>
                         <h4>Tamanho:</h4> <span>Individual</span>
                     </div>
                     <div class="card">
                         <img src="./assets/images/espaguetti_branco.png" alt=""/>
                         <h3>Espaguetti ao Molho Branco</h3>
                         <h4>Preço:</h4> <span>R$15,00</span>
+                        <br><br>
                         <h4>Tamanho:</h4> <span>Individual</span>
                     </div>
                     <div class="card">
                         <img src="./assets/images/espaguetti_branco.png" alt=""/>
                         <h3>Espaguetti ao Sugo</h3>
                         <h4>Preço:</h4> <span>R$16,00</span>
+                        <br><br>
                         <h4>Tamanho:</h4> <span>Individual</span>
                     </div>
                 </div>
                 <div id="sobremesas">
+                    <h2>Sobremesas</h2>
                     <div class="card">
                         <img src="./assets/images/pudim.png" alt=""/>
                         <h3>Pudim de Leite Condensado</h3>
                         <h4>Preço:</h4> <span>R$8,00</span>
-                        <h4>Tamanho:</h4> <span>Uma Fatia 100g</span>
+                        <br><br>
+                        <h4>Tamanho:</h4> <span>100g</span>
                     </div>
                     <div class="card">
                         <img src="./assets/images/brown.png" alt=""/>
                         <h3>Brownie de Chocolate</h3>
                         <h4>Preço:</h4> <span>R$9,00</span>
-                        <h4>Tamanho:</h4> <span>Uma Fatia 100g</span>
+                        <br><br>
+                        <h4>Tamanho:</h4> <span>100g</span>
                     </div>
                     <div class="card">
                         <img src="./assets/images/mousse.png" alt=""/>
                         <h3>Mousse de Limão</h3>
                         <h4>Preço:</h4> <span>R$11,00</span>
-                        <h4>Tamanho:</h4> <span>Uma Porção 100g</span>
+                        <br><br>
+                        <h4>Tamanho:</h4> <span>100g</span>
                     </div>
                 </div>
             </div>
         </section>
         <section id="sobre">
             <div class="content">
+                <h2>Sobre Nós</h2>
                 <div class="left">
+                    <img src="./assets/images/logo_big_grill.png" alt="" />
+                </div>
+                <div class="right">
                     <p>
                         Atuamos no ramo de alimentação oferencendo à nosso clientes, 
                         a qualidade e o tradicional tempero de uma comida caseira para 
@@ -207,13 +242,11 @@
                     e uma equipe de colaboradores todos bem treinados para levar 
                     aos seus clientes um excelente atendimento.
                 </div>
-                <div class="righ">
-                    <img src="./assets/images/logo_big_grill.png" alt="" />
-                </div>
             </div>
         </section>
         <section id="espaco">
             <div class="content">
+                <h2>Nosso Espaço</h2>
                 <div class="left">
                     O restaurante Big Grill é tradição na região. Com 15 anos 
                     de funcionamento, o Big Grill dispõe de ampla e completa 
@@ -228,11 +261,42 @@
         </section>
         <section id="contato">
             <div class="content">
+                <h2>Contato</h2>
                 <div class="left">
-                    Content left contato
+                    Utilize o formulário para entrar em contato conosco.
+                    <h3>Localização:</h3>
+                    <a href="https://goo.gl/maps/DSg7cFcHD4PHjBJK7" target="_blank">
+                        <img src="./assets/images/mapa.png" alt="" />
+                    </a>
+                    <span>Av. Afonso Pena 2222, Funcionários, Belo Horizonte, MG.</span>
                 </div>
                 <div class="right">
-                    Content right contato
+                    <form action="#">
+                        <fieldset>
+                            <legend>Contato</legend>
+                            <label for="name">Nome:</label>
+                            <input 
+                                type="text" 
+                                name="name" 
+                                id="name"
+                                placeholder="Digite seu nome..."
+                            />
+                            <label for="email">E-mail:</label>
+                            <input 
+                                type="email" 
+                                name="email" 
+                                id="email"
+                                placeholder="Digite seu e-mail..."
+                            />
+                            <label for="message">Mensagem:</label>
+                            <textarea 
+                                name="message" 
+                                id="message" 
+                                placeholder="Digite sua mensagem..."
+                            ></textarea>
+                            <button type="submit" id="submit">Enviar</button>
+                        </fieldset>
+                    </form>
                 </div>
             </div>
         </section>
@@ -242,11 +306,8 @@
         <div class="content">
             <div id="logo__footer">
                 <a href="#home">
-                    <img src="./assets/images/logo.png" alt="LOGO">
+                    <img src="./assets/images/logo_big_grill_branco.png" alt="LOGO">
                 </a>
-            </div>
-            <div id="endereco">
-                Av. Afonso Pena, 2222 - Belo Horizonte, MG.
             </div>
             <div id="sociais">
                 <a href="#">
@@ -255,6 +316,9 @@
                 <a href="#">
                     <img src="./assets/images/facebook_red.png" alt="" />
                 </a>
+            </div>
+            <div id="endereco">
+                Av. Afonso Pena, 2222 - Funcionários, Belo Horizonte, MG.
             </div>
             <div id="copy">
                 Big Grill ® Copyright 2023 | Todos os direitos reservados.
